Removed the line-spacing and text-font adjusters.

--- a/src/pmt/html/FullPreviewUIOptions.html
+++ b/src/pmt/html/FullPreviewUIOptions.html
@@ -10,9 +10,9 @@
         <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div><br/>
         <div class="flc-uiOptions-magnifier-position fl-uiOptions-category fl-uiOptions-text"></div><br/>
 
-        <br/><br/><br/><br/><br/>
+        <!-- <br/><br/><br/><br/><br/>
         <div class="flc-uiOptions-line-space fl-uiOptions-category fl-uiOptions-text"></div>
-        <div class="flc-uiOptions-text-font fl-uiOptions-category fl-uiOptions-text"></div>
+        <div class="flc-uiOptions-text-font fl-uiOptions-category fl-uiOptions-text"></div> -->
         <!-- <h2 class="fl-uiOptions-text-icon">Text and display</h2>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
         <div class="flc-uiOptions-text-font fl-uiOptions-category fl-uiOptions-text"></div>
