--- a/tests/discoveryTool/details.html
+++ b/tests/discoveryTool/details.html
@@ -6,6 +6,32 @@
         details {
             border: 1px solid #C5C5C5;
         }
+
+/* more-text display */
+@font-face {
+    font-family: 'DiscoveryToolIcons';
+    src:url('../../src/discoveryTool/fonts/GPII-DiscoveryTool.eot?#iefix') format('embedded-opentype'),
+         url('../../src/discoveryTool/fonts/GPII-DiscoveryTool.eot'),
+         url('../../src/discoveryTool/fonts/GPII-DiscoveryTool.ttf');
+}
+.fl-discoveryTool-moreText {
+    background-color: lightgrey;
+}
+
+details.customicon[open] summary {
+    float: left;
+}
+details.customicon summary::-webkit-details-marker {
+    display:none;
+}
+details.customicon summary:before {
+    content: "\e013";
+    font-family: 'DiscoveryToolIcons';
+    background-color: lightgrey;
+    font-size: 2em;
+    float: left;
+}
+
     </style>
 </head>
 
@@ -18,6 +44,7 @@
         <li>If the <summary> element is omitted the heading "details" will be used. This is the responsibility of the user agent.</li>
         <li>In these examples, the gray border is being added to the &lt;details&gt; element through local CSS.</li>
     </ul>
+
     <h2>Test: Open &lt;details&gt;, with &lt;summary&gt;</h2>
     <details open="true">
         <summary>An 'open' details section with a summary</summary>
@@ -40,6 +67,20 @@
         <p>This is a 'closed' details section without a summary.</p>
     </details>
 
-    <img alt="grammar nazi comic strip" src="http://24.media.tumblr.com/tumblr_lzq3yt3bVR1qz6z0no1_1280.jpg" />
+    <h2>Test: &lt;details&gt; with custom icon as Discovery Tool is using</h2>
+    <div class="flc-discoveryTool-moreText-details fl-fix fl-discoveryTool-moreText">
+        <details class="customicon">
+            <summary></summary>
+            Photo of stormy sky, with lightning striking over a city.
+        </details>
+    </div>
+
+<br/>
+<br/>
+<br/>
+<br/>
+    <div>
+        <img alt="grammar nazi comic strip" src="http://24.media.tumblr.com/tumblr_lzq3yt3bVR1qz6z0no1_1280.jpg" />
+    </div>
 
 </body>
