Moved the defaults for cursor-size, magnifier and magnifier-position to its own JS file which is included in index.html. This way the new custom adjusters are reusable.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="demo.css" />
 
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
+    <script type="text/javascript" src="../../src/shared/lib/cloud4all/CustomAdjusters.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PreferencesManagementTool.js"></script>
 
     <script type="text/javascript" src="demo.js"></script>
