--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -248,7 +248,7 @@
         <!-- This div is for the sliding panel that shows and hides the UI Options controls -->
         <div class="fl-panelBar fl-inverted-color">
             <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
-            <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide"> Show/Hide</button>
+            <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide"></button>
         </div>
 
         <!-- This is the div that will contain the UI Options component -->
