--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -33,7 +33,7 @@
 
     <div class="flc-toc-tocContainer toc"> </div>
 
-    <div class="flc-uiOptions-content">
+    <div>
         <header id="main-header">
             <div id="main-header-content">
                 <span class="fl-icon-tree" aria-label="Generic Logo" role="image"></span>
@@ -61,7 +61,7 @@
             </header>
 
             <div id="main">
-                <div id="article-filters" class="fl-clearfix">
+                <div id="article-filters" class="flc-uiOptions-simplify-hide fl-clearfix">
                     <div id="article-filter">
                         <span class="fl-font-size-130">Read</span><br>
                         Basic
@@ -76,7 +76,7 @@
                     </div>
                 </div>
 
-                <div id="helpful" class="fl-clearfix">
+                <div id="helpful" class="flc-uiOptions-simplify-hide fl-clearfix">
                     <h1>Electrons</h1>
 
                     <div>
@@ -85,7 +85,7 @@
                         <span class="fl-icon-thumbsDown" aria-label="No, thumbs down" role="image"></span>
                     </div>
                 </div>
-                <div class="resource-tools">
+                <div class="flc-uiOptions-simplify-hide resource-tools">
                     <menu type="toolbar" class="tools">
                         <li><a href="#">Make a Copy</a></li>
                         <li><a href="#">Details</a></li>
