Showing saved preferences in "console.log" when clicking "Save and Apply".

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -36,6 +36,15 @@
             components: {
                 uiOptions: {
                     options: {
+                        uiOptions: {
+                            options: {
+                                listeners: {
+                                    onSave: {
+                                        listener: "console.log"
+                                    }
+                                }
+                            }
+                        },
                         preview: {
                             options: {
                                 templateUrl: "uiOptionsPreview.html"
