GPII-153: Switches and checkboxes initially stylized.

--- a/demos/speakTextAdjusterGroup/index.html
+++ b/demos/speakTextAdjusterGroup/index.html
@@ -6,12 +6,11 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-text.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-text-uio.css" />
-        <!--<link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/UIOptions.css" />-->
+        <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/UIOptions.css" />
 
         <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakText.js"></script>
-
         <title>Speak Text Demo</title>
         </head>
     <body>
