--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -248,7 +248,7 @@
         <div class="fl-panelBar fl-inverted-color">
             <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
             <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide"></button>
-            <label class="flc-icon-discover fl-icon-discover" role="presentation" aria-label="Discover"></label>
+            <label for="show-hide" class="flc-icon-discover fl-icon-discover" role="presentation" aria-label="Discover"></label>
         </div>
 
         <!-- This is the div that will contain the UI Options component -->
