--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="demo.js"></script>
 </head>
 
-<body class="discovery-tool-demo">
+<body class="discovery-tool-demo fl-focus">
 
     <script type="text/javascript">
         $(document).ready(function () {
