GPII-127: Commit changes for more text icon

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -37,7 +37,7 @@
     <div class="flc-uiOptions-content">
         <header id="main-header">
             <div id="main-header-content">
-                <span class="fl-icon-tree" aria-label="Generic Logo" role="image"></span>
+                <span class="fl-icon-tree" aria-label="Generic Logo" role="img"></span>
 				<span class="fl-header-title">Richmond Open Learning</span>
                 <div>
                     <input type="search" placeholder="SEARCH" /> <span class="fl-icon-search" role="presentation"></span><a href="#" class="subjects">Subjects</a>
@@ -47,7 +47,7 @@
 
         <section class="main-content">
             <header class="fl-clearfix">
-                <span class="fl-icon-atom" aria-label="Graphic of an atom" role="image"></span>
+                <span class="fl-icon-atom" aria-label="Graphic of an atom" role="img"></span>
                 <h1>Electrons</h1>
 
                 <div id="breadcrumbs">
@@ -56,8 +56,8 @@
                 </div>
 
                 <div id="prevNext">
-                    <a href="#"><span class="fl-icon-prev" aria-label="Previous" role="image"></span></a>  
-                    <a href="#"><span class="fl-icon-next" aria-label="Next" role="image"></span></a>
+                    <a href="#"><span class="fl-icon-prev" aria-label="Previous" role="img"></span></a>
+                    <a href="#"><span class="fl-icon-next" aria-label="Next" role="img"></span></a>
                 </div>
             </header>
 
@@ -82,8 +82,8 @@
 
                     <div>
                         Was this helpful?
-                        <span class="fl-icon-thumbsUp" aria-label="Yes, thumbs up" role="image"></span>
-                        <span class="fl-icon-thumbsDown" aria-label="No, thumbs down" role="image"></span>
+                        <span class="fl-icon-thumbsUp" aria-label="Yes, thumbs up" role="img"></span>
+                        <span class="fl-icon-thumbsDown" aria-label="No, thumbs down" role="img"></span>
                     </div>
                 </div>
                 <div class="resource-tools">
