GPII-153: The Speech rate adjuster added.

--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -26,9 +26,11 @@
             </div><br><br><br>
         </div>
 
-        <div>
-            <label class="gpii-speechRate-label" for="speech-rate"></label><br>
-            <select class="gpii-speechRate fl-inputs" id="speech-rate"></select>
+        <div id="speech-rate">
+            <label class="gpii-speechRate-label" for="speech-rate-input"></label><br>
+            <label class="gpii-speechRate-minus" for="speech-rate-input" id="-"></label>
+            <input type="text" class="gpii-speechRate fl-inputs"/>
+            <label class="gpii-speechRate-plus" for="speech-rate-input" id="-"></label>
         </div><br>
 
         <div id="expanded-bottom">
@@ -66,7 +68,7 @@
                         </span>
                     </label>
                 </div>
-            </div><br><br><br>
+            </div><br><br><br><br>
         </div>
         <div id="more-options">+ more</div>
     </div>
