GPII-128: fixed type-o

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -27,7 +27,7 @@
         $(document).ready(function () {
             demo.initSettingsStore();
             demo.initPageEnhancer("discovery-tool-theme");
-            demo.intiDiscoveryTool(".flc-uiOptions-discoveryTool");
+            demo.initDiscoveryTool(".flc-uiOptions-discoveryTool");
         })
     </script>
 
