--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -247,7 +247,7 @@
         <!-- This div is for the sliding panel that shows and hides the discoveryTool controls -->
         <div class="fl-panelBar fl-inverted-color">
             <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
-            <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide"></button>
+            <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide" aria-label=""></button>
             <label for="show-hide" class="flc-icon-discover fl-icon-discover" role="presentation" aria-label="Discover"></label>
         </div>
 
