Created a CSS for styling the PMT UIOptions component. Styling the PMT UIOptions component as in http://wiki.fluidproject.org/display/fluid/%28C4A%29+Preference+Editor+adjuster+mockups+for+iteration+2 Currently letting only the cursor-size in.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/FullPreviewUIOptions.css" />
 
     <link rel="stylesheet" type="text/css" href="demo.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/pmt/css/PreferencesManagementTool.css" />
 
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <script type="text/javascript" src="../../src/shared/lib/cloud4all/CustomAdjusters.js"></script>
