--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,14 +1,16 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
-    <div class="fl-container-flex60 fl-force-left">
+    <div class="fl-container-flex60 fl-force-left preference">
 
-		<h1 class="">Size</h1>
+		<img class="adjusterGroupTitle" src="./images/increaseSize.png"></img>
+        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
+
+		<!-- <h1 class="">Size</h1>
 		<h2 class="">Appearance</h2>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
-        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
 		<br/><br/>
-		<!-- <h2 class="">Magnifier</h2> -->
+		<h2 class="">Magnifier</h2>
         <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div><br/>
-        <div class="flc-uiOptions-magnifier-position fl-uiOptions-category fl-uiOptions-text"></div><br/>
+        <div class="flc-uiOptions-magnifier-position fl-uiOptions-category fl-uiOptions-text"></div><br/> -->
 
         <!-- <br/><br/><br/><br/><br/>
         <div class="flc-uiOptions-line-space fl-uiOptions-category fl-uiOptions-text"></div>
