"increase size" category title is overlayed on image as text.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,7 +1,11 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
     <div class="fl-container-flex60 fl-force-left preference">
 
-		<img class="adjusterGroupTitle" src="./images/increaseSize.png"></img>
+		<div class="headerImage">
+			<img class="adjusterGroupTitle" src="./images/increaseSizeHeader.png"></img>
+			
+			<h1 class="headerTitle">increase size</h1>
+		</div>
         <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
 
 		<!-- <h1 class="">Size</h1>
