--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" />
     <script type="text/javascript" src="../../lib/infusion/MyInfusion.js"></script>
     <title>Speak text</title>
@@ -44,19 +46,29 @@
                 <select class="gpii-auditoryOutLanguage fl-inputs" id="languages"></select>
             </div><br>
 
-
-            <div class="gpii-punctuationVerbosity-description"></div><br>
-
+            <label> Announce </label><br>
+<!--             <label class="gpii-punctuationVerbosity-bigLabel"></label>
             <div class="gpii-punctuationVerbosity-row">
-                <input type="radio" class="gpii-punctuationVerbosity" name="punctuationVerbosity" id="some" value="some" />
-                <label class="gpii-punctuationVerbosity-label" for="some"></label>
+                <input type="radio" class="gpii-punctuationVerbosity" name="punctuationVerbosity" id="radioButton-option" value="some" />
+                <label class="gpii-punctuationVerbosity-label" for="radioButton-option"></label>
+            </div><br> -->
+
+            <div class="announce">
+                <input type="radio" name="punctuationVerbosity" value="none" id="none" checked>
+                <label for="none" class="radioButton-left">None</label>
+                <input type="radio" name="punctuationVerbosity" value="some" id="some">
+                <label for="some" class="radioButton-middle radioButton-second">Some</label>
+                <input type="radio" name="punctuationVerbosity" value="most" id="most">
+                <label for="most" class="radioButton-middle radioButton-third">Most</label>
+                <input type="radio" name="punctuationVerbosity" value="all" id="all">
+                <label for="all" class="radioButton-right">All</label>
             </div><br>
 
             <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" />
             <label for="announce-uppercase" class="checkbox-label"><span class="gpii-announceCapitals-label"></span></label><br>
 
             <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages" />
-            <label for="announce-instructions" class="checkbox-label"><span class="gpii-speakTutorialMessages-label"></span></label><br><br>
+            <label for="announce-instructions" class="checkbox-label long-lined-label"><span class="gpii-speakTutorialMessages-label"></span></label><br><br>
 
             <label> Read-back </label> <br>
             <input type="checkbox" id="echo-letter" class="gpii-keyEcho" />
@@ -78,7 +90,7 @@
                 <div class="gpii-screenReaderBrailleOutput-description"></div>
             </div><br><br>
         </div>
-        <div id="more-options">+ more</div>
+        <div class="more-options">+ more</div>
     </div>
 </body>
 </html>
