--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -6,7 +6,7 @@
 			
 			<h1 class="headerTitle">increase size</h1>
 		</div>
-        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
+        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
         <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
 
 		<!-- <h1 class="">Size</h1>
