Using the Google fonts as described here, http://wiki.fluidproject.org/display/fluid/%28C4A%29+Preference+Editor+adjuster+mockups+for+iteration+2#id-%28C4A%29PreferenceEditoradjustermockupsforiteration2-Assets

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -16,8 +16,10 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/FullPreviewUIOptions.css" />
 
     <link rel="stylesheet" type="text/css" href="demo.css" />
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../../src/pmt/css/PreferencesManagementTool.css" />
-
+	
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <script type="text/javascript" src="../../src/shared/lib/cloud4all/CustomAdjusters.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PreferencesManagementTool.js"></script>
