GPII-153: Radio buttons connected to the model.

--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -47,21 +47,13 @@
             </div><br>
 
             <label> Announce </label><br>
-<!--             <label class="gpii-punctuationVerbosity-bigLabel"></label>
-            <div class="gpii-punctuationVerbosity-row">
-                <input type="radio" class="gpii-punctuationVerbosity" name="punctuationVerbosity" id="radioButton-option" value="some" />
-                <label class="gpii-punctuationVerbosity-label" for="radioButton-option"></label>
-            </div><br> -->
+            <label class="gpii-punctuationVerbosity-label"></label>
 
-            <div class="announce">
-                <input type="radio" name="punctuationVerbosity" value="none" id="none" checked>
-                <label for="none" class="radioButton-left">None</label>
-                <input type="radio" name="punctuationVerbosity" value="some" id="some">
-                <label for="some" class="radioButton-middle radioButton-second">Some</label>
-                <input type="radio" name="punctuationVerbosity" value="most" id="most">
-                <label for="most" class="radioButton-middle radioButton-third">Most</label>
-                <input type="radio" name="punctuationVerbosity" value="all" id="all">
-                <label for="all" class="radioButton-right">All</label>
+            <div class="punctuationVerbosity-container">
+                <div class="gpii-punctuationVerbosity-row">
+                    <input type="radio" class="gpii-punctuationVerbosity" name="punctuationVerbosity" id="radioButton-option" value="some" />
+                    <label class="gpii-punctuationVerbosity-option-label" for="radioButton-option"></label>
+                </div>
             </div><br>
 
             <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" />
