Using an image checkbox and a label to switch between un/checked "Increase Size".

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -2,9 +2,10 @@
     <div class="fl-container-flex60 fl-force-left preference">
 
 		<div class="headerImage">
-			<img class="adjusterGroupTitle" src="./images/increaseSizeHeader.png"></img>
+	        <input type="checkbox" id="preferenceSwitch"/>
+			<!-- <img class="adjusterGroupTitle" src="../../src/pmt/images/increaseSizeHeader.png"></img> -->
 			
-			<h1 class="headerTitle">increase size</h1>
+			<label class="headerTitle" for="preferenceSwitch">increase size</label>
 		</div>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
         <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
