Grouped all "increase size" adjusters in a div.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -7,9 +7,12 @@
 			
 			<label class="headerTitle" for="preferenceSwitch">increase size</label>
 		</div>
-        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
-        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
-        <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div><br/>
+
+	    <div class="increaseSizePreferenceGroup">
+	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
+	        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
+	        <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div><br/>
+		</div>	
 
 		<!-- <h1 class="">Size</h1>
 		<h2 class="">Appearance</h2>
