Trying to hook to the onReady event of UIO. No success yet.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -44,7 +44,11 @@
                                 listeners: {
                                     onSave: {
                                         listener: "console.log"
+                                    },
+                                    onReady: {
+                                        listener: "console.log"
                                     }
+                                    
                                 }
                             }
                         },
