GPII-153: Implemented the Textfield Stepper custom adjuster used by the Speak Text adjuster group.

--- a/demos/speakTextAdjusterGroup/index.html
+++ b/demos/speakTextAdjusterGroup/index.html
@@ -10,6 +10,7 @@
 
         <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
+        <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakText.js"></script>
         <title>Speak Text Demo</title>
         </head>
