--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -33,11 +33,11 @@
             </div><br><br><br>
         </div>
 
-        <div id="speech-rate">
+        <div id="speech-rate" class="gpii-speechRate">
             <label class="gpii-speechRate-label" for="speech-rate-input"></label><br>
-            <label class="gpii-speechRate-minus" for="speech-rate-input" id="-"></label>
-            <input type="text" class="gpii-speechRate fl-inputs"/>
-            <label class="gpii-speechRate-plus" for="speech-rate-input" id="-"></label>
+            <label class="gpii-textfieldStepper-decrement gpii-speechRate-minus" id="speechRateMinus"></label>
+            <input type="text" class="gpii-textfieldStepper-field fl-inputs" id="speechRate"/>
+            <label class="gpii-textfieldStepper-increment gpii-speechRate-plus" id="speechRatePlus"></label>
         </div><br>
 
         <div id="expanded-bottom">
