Binding to "onUIOptionsComponentReady" to attach listener to checkbox.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -44,10 +44,10 @@
                                 listeners: {
                                     onSave: {
                                         listener: "console.log"
-                                    }/* ,
-                                    onReady: {
-                                        listener: "console.log"
-                                    } */
+                                    },
+                                    onUIOptionsComponentReady: {
+                                        listener: demo.initFinishedEvent
+                                    }
                                     
                                 }
                             }
