Sliding the category divs when sliding in order to work correctly. Styled things for sliding to work correctly.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -10,8 +10,8 @@
 
 	    <div class="increaseSizePreferenceGroup">
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
-	        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
-	        <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div><br/>
+	        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div>
+	        <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div>
 		</div>	
 
 		<!-- <h1 class="">Size</h1>
