--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -9,88 +9,29 @@
 </head>
 
 <body>
-    <div id="prompt-message">
-        <label id="prompt-message-label" for="star" class="gpii-addOrRemovePreference-label pref-checkbox-label" style="color:black; font-size:13px; font-weight:bold;"></label>
-    </div>
-    <input type="checkbox" id="star" class="gpii-addOrRemovePreference"/>
-    <label for="star" class="gpii-addOrRemovePreference-label pref-checkbox-label"></label>
 
-    <input type="checkbox" id="preferenceSwitch" class="gpii-screenReaderTTSEnabled"/>
-    <label for="preferenceSwitch" class="gpii-screenReaderTTSEnabled-label main-checkbox-label"></label>
-    <br><br>
-    <div class="preference">
-        <div id="expanded-top">
-            <div>
-                <h3><label for="screenReaderSwitch" class=" gpii-screenReaderSwitch-label switch"></label></h3>
-                <div id="screen-reader-onoff" class="fl-uiOptions-onoff">
-                    <input type="checkbox" id="screenReaderSwitch" class="gpii-screenReaderSwitch"/>
-                    <label for="screenReaderSwitch">
-                        <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                            <span class="fl-uiOptions-switch-inner"></span>
-                        </span>
-                    </label>
-                </div>
-            </div><br><br><br>
+<form id="options" action="" class="fl-uiOptions fl-uiOptions-fullNoPreview fl-col-fixed-72em fl-focus">
+    <div class="flc-uiOptions-controls">
+        <div class="fl-uiOptions-category">
+            <div class="speakText-addOrRemovePreference"></div>
+            <div class="speakText-screenReaderTTSEnabled"></div><br>
+            <div class="speakText-screenReaderSwitch"></div><br><br>
+            <div class="speakText-speechRate"></div>
+            <div class="speakText-auditoryOutLanguage"></div><br>
+            <div class="speakText-punctuationVerbosity"></div><br>
+            <div class="speakText-announceCapitals"></div>
+            <div class="speakText-speakTutorialMessages"></div>
+            <div class="speakText-keyEcho"></div>
+            <div class="speakText-wordEcho"></div>
+            <div class="speakText-screenReaderBrailleOutput"></div>
         </div>
-
-        <div id="speech-rate">
-            <label class="gpii-speechRate-label" for="speech-rate-input"></label><br>
-            <label class="gpii-speechRate-minus" for="speech-rate-input" id="-"></label>
-            <input type="text" class="gpii-speechRate fl-inputs"/>
-            <label class="gpii-speechRate-plus" for="speech-rate-input" id="-"></label>
-        </div><br>
-
-        <div id="expanded-bottom">
-            <div>
-                <label class="gpii-auditoryOutLanguage-label" for="languages"></label><br>
-                <select class="gpii-auditoryOutLanguage fl-inputs" id="languages"></select>
-            </div><br>
-
-            <label> Announce </label><br>
-<!--             <label class="gpii-punctuationVerbosity-bigLabel"></label>
-            <div class="gpii-punctuationVerbosity-row">
-                <input type="radio" class="gpii-punctuationVerbosity" name="punctuationVerbosity" id="radioButton-option" value="some" />
-                <label class="gpii-punctuationVerbosity-label" for="radioButton-option"></label>
-            </div><br> -->
-
-            <div class="announce">
-                <input type="radio" name="punctuationVerbosity" value="none" id="none" checked>
-                <label for="none" class="radioButton-left">None</label>
-                <input type="radio" name="punctuationVerbosity" value="some" id="some">
-                <label for="some" class="radioButton-middle radioButton-second">Some</label>
-                <input type="radio" name="punctuationVerbosity" value="most" id="most">
-                <label for="most" class="radioButton-middle radioButton-third">Most</label>
-                <input type="radio" name="punctuationVerbosity" value="all" id="all">
-                <label for="all" class="radioButton-right">All</label>
-            </div><br>
-
-            <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" />
-            <label for="announce-uppercase" class="checkbox-label"><span class="gpii-announceCapitals-label"></span></label><br>
-
-            <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages" />
-            <label for="announce-instructions" class="checkbox-label long-lined-label"><span class="gpii-speakTutorialMessages-label"></span></label><br><br>
-
-            <label> Read-back </label> <br>
-            <input type="checkbox" id="echo-letter" class="gpii-keyEcho" />
-            <label for="echo-letter" class="checkbox-label"><span class="gpii-keyEcho-label"></span></label><br>
-
-            <input type="checkbox" id="echo-word" class="gpii-wordEcho" />
-            <label for="echo-word" class="checkbox-label"><span class="gpii-wordEcho-label"></span></label>
-
-            <div>
-                <h3><label for="braille" class="gpii-screenReaderBrailleOutput-label switch"></label></h3>
-                <div id="braille-onoff" class="fl-uiOptions-onoff">
-                    <input type="checkbox" id="braille" class="gpii-screenReaderBrailleOutput" />
-                    <label for="braille">
-                        <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                            <span class="fl-uiOptions-switch-inner"></span>
-                        </span>
-                    </label>
-                </div><br><br>
-                <div class="gpii-screenReaderBrailleOutput-description"></div>
-            </div><br><br>
-        </div>
-        <div class="more-options">+ more</div>
     </div>
+</form>
+
+<div class="fl-text-align-center fl-uiOptions-buttons">
+    <input class="flc-uiOptions-save fl-uiOptions-save" type="button" value="Save and apply" />
+    <input class="flc-uiOptions-reset" type="button" value="Reset and apply" />
+    <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" value="Cancel" />
+</div>
 </body>
 </html>
