--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -12,6 +12,17 @@
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
 	        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div>
 	        <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div>
+
+	        <div class="fl-uiOptions-category-hidden fl-uiOptions-text">
+		        <div class="fl-uiOptions-category fl-uiOptions-text">
+	        	Aaaaaa
+		        </div>
+		        <div class="fl-uiOptions-category fl-uiOptions-text">
+	        	Bbbbbb
+		        </div>
+	        </div>
+
+			<label class="moreLess fl-uiOptions-category">+ more</label>
 		</div>	
 
 		<!-- <h1 class="">Size</h1>
