Brought back the magnifier position.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -12,7 +12,8 @@
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
 	        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div>
 	        <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div>
-
+			<div class="flc-uiOptions-magnifier-position fl-uiOptions-category fl-uiOptions-text"></div>
+			
 	        <div class="fl-uiOptions-category-hidden fl-uiOptions-text">
 		        <div class="fl-uiOptions-category fl-uiOptions-text">
 	        	Aaaaaa
@@ -29,7 +30,7 @@
 		<h2 class="">Appearance</h2>
 		<br/><br/>
 		<h2 class="">Magnifier</h2>
-        <div class="flc-uiOptions-magnifier-position fl-uiOptions-category fl-uiOptions-text"></div><br/> -->
+        <br/> -->
 
         <!-- <br/><br/><br/><br/><br/>
         <div class="flc-uiOptions-line-space fl-uiOptions-category fl-uiOptions-text"></div>
