GPII-179: Fixed styling issues with IE8 caused by the fact that IE8 doesn't support html5 tags.

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -14,6 +14,10 @@
 
     <link rel="stylesheet" type="text/css" href="demo.css" />
 
+    <!--[if lt IE 9]>
+        <script type="text/javascript" src="../../src/shared/lib/html5shiv/html5shiv.js"></script>
+    <![endif]-->
+
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <script type="text/javascript" src="../../src/discoveryTool/js/SelfVoicingEnactor.js"></script>
     <script type="text/javascript" src="../../src/discoveryTool/js/DiscoveryTool.js"></script>
