GPII-179: Fixed the IE8 image scaling issue.

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -12,13 +12,16 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-lgdg-uio.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css" />
 
-    <link rel="stylesheet" type="text/css" href="demo.css" />
+    <link rel="stylesheet" type="text/css" href="css/demo.css" />
+    <!--[if lt IE 9]>
+        <link rel="stylesheet" type="text/css" href="css/ltie9.css" />
+    <![endif]-->
 
+    <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <!--[if lt IE 9]>
         <script type="text/javascript" src="../../src/shared/lib/html5shiv/html5shiv.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <script type="text/javascript" src="../../src/discoveryTool/js/SelfVoicingEnactor.js"></script>
     <script type="text/javascript" src="../../src/discoveryTool/js/DiscoveryTool.js"></script>
 
