--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -5,6 +5,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" />
     <script type="text/javascript" src="../../lib/infusion/MyInfusion.js"></script>
+    <script type="text/javascript" src="../js/speakTextPanels.js"></script>
     <title>Speak text</title>
 </head>
 
@@ -15,15 +16,21 @@
         <div class="fl-uiOptions-category">
             <div class="speakText-addOrRemovePreference"></div>
             <div class="speakText-screenReaderTTSEnabled"></div><br>
-            <div class="speakText-screenReaderSwitch"></div><br><br>
-            <div class="speakText-speechRate"></div>
-            <div class="speakText-auditoryOutLanguage"></div><br>
-            <div class="speakText-punctuationVerbosity"></div><br>
-            <div class="speakText-announceCapitals"></div>
-            <div class="speakText-speakTutorialMessages"></div>
-            <div class="speakText-keyEcho"></div>
-            <div class="speakText-wordEcho"></div>
-            <div class="speakText-screenReaderBrailleOutput"></div>
+            <div class="speakText-screenReaderSwitch expanded-top"></div><br><br>
+            <div class="speakText-speechRate speech-rate"></div>
+            <div class="expanded-bottom">
+                <div class="speakText-auditoryOutLanguage"></div><br>
+                <div class="speakText-punctuationVerbosity"></div><br>
+                <div class="speakText-announceCapitals"></div>
+                <div class="speakText-speakTutorialMessages"></div>
+                <div class="speakText-keyEcho"></div>
+                <div class="speakText-wordEcho"></div>
+                <div class="speakText-screenReaderBrailleOutput"></div>
+            </div>
+            <div class="more-options">
+                <input type="checkbox" id="more-options-checkbox"/>
+                <label for="more-options-checkbox" class="more-options-label">+ more</label>
+            </div>
         </div>
     </div>
 </form>
