GPII-179: Added in PNG fall back to solve the problem that SVGs are not showed in IE8.

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-lgdg-uio.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css" />
 
-    <link rel="stylesheet" type="text/css" href="css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="demo.css" />
     <!--[if lt IE 9]>
-        <link rel="stylesheet" type="text/css" href="css/ltie9.css" />
+        <link rel="stylesheet" type="text/css" href="ltie9.css" />
     <![endif]-->
 
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
