Using the 'icons-no-frames-aug-29' font icons.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -2,7 +2,7 @@
     <div class="fl-container-flex60 fl-force-left preference">
 
         <input type="checkbox" id="preferenceSwitch"/>
-		<div class="headerImage">
+		<div class="headerImage fl-adjuster-icons">
 		</div>
 		<label class="headerTitle" for="preferenceSwitch">increase size</label>
 
