This is an initial, clumsy way of previewing changes to text-size only.

--- a/demos/pmt/uiOptionsTextPreview.html
+++ b/demos/pmt/uiOptionsTextPreview.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Preview</title>
 </head>
-<body>
-	<label>This is the general preview.</label>
+<body style="margin: 0;">
+	<label>This is how most text will appear.</label>
 </body>
 </html>
