Divide-and-conquer: Last three checkboxes added to the big panel + selectors for +more/-less.

--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -16,21 +16,28 @@
         <div class="fl-uiOptions-category">
             <div class="speakText-addOrRemovePreference"></div>
             <div class="speakText-screenReaderTTSEnabled"></div><br>
-            <div class="speakText-screenReaderSwitch expanded-top"></div><br><br>
-            <div class="speakText-speechRate speech-rate"></div>
-            <div class="expanded-bottom">
-                <div class="speakText-auditoryOutLanguage"></div><br>
-                <div class="speakText-punctuationVerbosity"></div><br>
-                <div class="speakText-announceCapitals"></div>
-                <div class="speakText-speakTutorialMessages"></div>
-                <div class="speakText-keyEcho"></div>
+            <div class="preference">
+                <div class="expanded-top">
+                    <div class="speakText-screenReaderSwitch"></div>
+                </div>
+
+                <div class="speakText-speechRate speech-rate"></div>
+
+                <div class="expanded-bottom">
+                    <div class="speakText-auditoryOutLanguage"></div><br>
+                    <div class="speakText-punctuationVerbosity"></div><br>
+                    <div class="speakText-announceCapitals"></div>
+                    <div class="speakText-speakTutorialMessages"></div>
+                    <div class="speakText-keyEcho"></div>
+                    <div class="speakText-screenReaderBrailleOutput"></div>
+                </div>
                 <div class="speakText-wordEcho"></div>
-                <div class="speakText-screenReaderBrailleOutput"></div>
             </div>
-            <div class="more-options">
+
+<!--             <div class="more-options">
                 <input type="checkbox" id="more-options-checkbox"/>
                 <label for="more-options-checkbox" class="more-options-label">+ more</label>
-            </div>
+            </div> -->
         </div>
     </div>
 </form>
