--- a/src/shared/adjusters/html/speakTextTemplate-wordEcho.html
+++ b/src/shared/adjusters/html/speakTextTemplate-wordEcho.html
@@ -1,4 +1,27 @@
-<div class="speakText-wordEcho-element">
-    <input type="checkbox" id="echo-word" class="gpii-wordEcho" />
-    <label for="echo-word" class="checkbox-label"><span class="gpii-wordEcho-label"></span></label>
+<!-- <div class="speakText-screenReaderTTSEnabled-element">
+    <input type="checkbox" id="preferenceSwitch" class="gpii-screenReaderTTSEnabled"/>
+    <label for="preferenceSwitch" class="gpii-screenReaderTTSEnabled-label main-checkbox-label"></label>
+</div> -->
+
+<div class="expanded-bottom">
+    <div class="speakText-speakTutorialMessages-element">
+        <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages" />
+        <label for="announce-instructions" class="checkbox-label long-lined-label"><span class="gpii-speakTutorialMessages-label"></span></label>
+    </div>
+
+    <div class="speakText-keyEcho-element">
+        <input type="checkbox" id="echo-letter" class="gpii-keyEcho" />
+        <label for="echo-letter" class="checkbox-label"><span class="gpii-keyEcho-label"></span></label><br>
+    </div>
+
+    <div class="speakText-wordEcho-element">
+        <input type="checkbox" id="echo-word" class="gpii-wordEcho" />
+        <label for="echo-word" class="checkbox-label"><span class="gpii-wordEcho-label"></span></label>
+    </div>
+</div>
+
+
+<div class="more-options">
+    <input type="checkbox" class="more-options-checkbox"/>
+    <label for="moreOptions" class="more-options-label">+ more</label>
 </div>
